examples/test/testpolicy8443.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8443
  namespace: namespace299
spec:
  podSelector:
    matchLabels:
      key15: value3
      key22: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value7
          key0: value47
          key30: value46
      podSelector:
        matchLabels:
          key18: value8
          key0: value7
